# weavslide

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/weavslide/: __init__.py  cli.py  parser.py  style.css  template.j2
