[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weavslide"
version = "0.1.0"
description = "自动生成讲座展示和 AI 配音的工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "yankeguo" },
]
keywords = ["slides", "presentation", "ai", "voiceover"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
weavslide = "weavslide.cli:main"

[project.urls]
Homepage = "https://github.com/yankeguo/weavslide"
Repository = "https://github.com/yankeguo/weavslide"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/weavslide"]
