[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weavslide"
dynamic = ["version"]
description = "自动生成讲座展示和 AI 配音的工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "yankeguo" },
]
keywords = ["slides", "presentation", "ai", "voiceover"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
weavslide = "weavslide.cli:main"

[project.urls]
Homepage = "https://github.com/yankeguo/weavslide"
Repository = "https://github.com/yankeguo/weavslide"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.hatch.version]
path = "src/weavslide/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/weavslide"]
include = ["src/weavslide/**/*.css"]
